tdf#118385 Avoid crash on loading document

Change-Id: Ifb18fee79667a5d0284407e84877b0d4d89536d9
Reviewed-on: https://gerrit.libreoffice.org/59173
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/59250
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>